--- a/src/home/shopsowner/shopsowner.css
+++ b/src/home/shopsowner/shopsowner.css
@@ -122,3 +122,13 @@
   text-decoration: underline red;
   transition: 0.4s;
 }
+
+.item {
+  width: 300px ;
+  height: 300px;
+  border: 2px solid black;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 25px;
+  color: black;
+}
