--- a/src/home/template3/template3.css
+++ b/src/home/template3/template3.css
@@ -9,4 +9,26 @@
 .keypoint img {
   width: 50px;
 } 
+.footertemp3 {
+  background: black;
+}
+.contacttxttemp3 h3 {
+  color: white;
+}
+.contactli li {
+  color: white;
+}
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  .keypoint {
+  margin: 40px;
+  width: 200px;
+  border: 2px solid black;
+  border-radius: 25px;
+  height: 190px;
+}
+.keypoint img {
+  width: 50px;
+  border-radius: 50%;
+} 
 }
