--- a/src/home/dropmentcontacts/contacts.css
+++ b/src/home/dropmentcontacts/contacts.css
@@ -1,13 +1,3 @@
-.contact {
-    background-color: black;
-    border: 2px solid black;
-    border-radius: 15px;
-    margin-top: 50px;
-}
-.contacthead h2 {
-    color: white;
-}
+@media (min-width: 312px) and (max-width: 480px) {
 
-.contacts li {
-    color: white;
 }
