--- a/src/home/dropmentcontacts/contacts.css
+++ b/src/home/dropmentcontacts/contacts.css
@@ -1,3 +1,11 @@
-@media (min-width: 312px) and (max-width: 480px) {
+.contact {
+        background-color: black;
+        margin-top: 50px;
+    }
+    .contacthead h2 {
+        color: white;
+    }
+    .contacts li {
+        color: white;
+    }
 
-}
