--- a/src/home/header/home.css
+++ b/src/home/header/home.css
@@ -2,6 +2,7 @@
     .prodsonhomepg {
         border: 2px solid black;
         border-radius: 15px;
+        margin-top: 80px;
     }
 }
 
@@ -9,6 +10,7 @@
     .prodsonhomepg {
         border: 2px solid black;
         border-radius: 15px;
+        margin-top: 80px;
     }
 }
 
@@ -16,5 +18,6 @@
     .prodsonhomepg {
         border: 2px solid black;
         border-radius: 15px;
+        margin-top: 80px;
     }
 }
