--- a/src/home/template3/template3.css
+++ b/src/home/template3/template3.css
@@ -1,102 +1,117 @@
 @media (min-width: 312px) and (max-width: 480px){ 
-.keypoint {
-  margin: 40px;
-  width: 200px;
-  border: 2px solid black;
-  border-radius: 25px;
-  height: 190px;
-}
-.keypoint img {
-  width: 50px;
-} 
-.footertemp3 {
-  background: black;
-}
-.contacttxttemp3 h3 {
-  color: white;
-}
-.contactli li {
-  color: white;
-}
+
 }
 @media (min-width: 481px) and (max-width: 768px) {
-  .keypoint {
-  margin: 40px;
-  width: 200px;
-  border: 2px solid black;
-  border-radius: 25px;
-  height: 190px;
-}
-.keypoint img {
-  width: 50px;
-  border-radius: 50%;
-} 
-
+  
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-  .keypoint {
-  margin: 10px;
-  width: 200px;
-  border: 2px solid black;
-  border-radius: 25px;
-  height: 190px;
-}
-.keypoint img {
-  width: 50px;
-  border-radius: 50%;
-}
-.keypoints {
-  display: inline-flex;
-}
+ 
 }
 
 @media (min-width: 1025px){
-    .keypoint {
-  margin: 50px;
-  width: 200px;
-  border: 2px solid black;
-  border-radius: 25px;
-  height: 190px;
-}
-.keypoint img {
-  width: 50px;
-  border-radius: 50%;
-}
-.keypoints {
-  display: inline-flex;
-}
-}
-
-.footertemp3 footer {
-  background-color: black;
-}
-
-.contacttxttemp3 h3 {
-  color: white;
-}
-
-.footertemp3 li {
-  color: white;
-}
-.shop_owner_view h2 {
-  color: white;
-}
-.insta img {
-  width: 40px;
-  float: right;
-  margin-left: 980px;
-}
-
-.temp3header header {
-  display: inline-flex;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  padding: 50px;
-}
-
-.name h2 {
-  color: white;
-  font-weight: 300;
+  .header1tem3 header {
+    display: inline-flex;
+    background-color: white;
+  }
+  .header1tem3 img {
+    width: 100px;
+    height: 100px;
+  }
+  .header1tem3 ul {
+    display: inline-flex;
+    list-style: none;
+  }
+  .header1tem3 button {
+    background-color: transparent;
+    color: black;
+    border: transparent;
+    margin-left: 50px;
+    margin-top: 10px;
+    font-size: medium;
+  }
+  .header2temp3 {
+    display: inline-flex;
+    margin-left: 40px;
+  }
+  .textsectiontemp3header2 {
+    width: 400px;
+  }
+  .imgsectionintemp3header2 img {
+    width: 500px;
+    height: 350px;
+    margin-left: 300px;
+    border-radius: 25px;
+  }
+  .salestexttemp3 {
+    color: #480ca8;
+    font-size: xx-large;
+  }
+  .productimgtemp3 img {
+    width: 180px;
+    height: 150px;
+    margin-left: 10px;
+    border-radius: 25px;
+  }
+  .productmodeltemp3 {
+    border: 1px solid black;
+    border-radius: 25px;
+    padding: 20px;
+    width: 200px;
+    height: 240px;
+    list-style: none;
+  }
+  .ourservicestemp3 h1 {
+    margin-top: 150px;
+    text-align: center;
+  }
+  .abt1no1part1temp3 {
+     display: inline-flex;
+     margin-top: 150px;
+  }
+  .textsectemp3abt1part1 {
+    width: 500px;
+    text-align: center;
+    margin-left: 100px;
+  }
+  .imgsecabt1no1tmep3part1 img {
+    width: 450px;
+    height: 400px;
+    border-radius: 25px;
+    margin-left: 100px;
+  }
+  .testimonialtemp3  {
+    background-color: #5e17eb;
+    padding: 70px;
+    display: inline-flex;
+    width: 1045px;
+    margin-top: 150px;
+    margin-left: 50px;
+    border-radius: 25px;
+  }
+  .testimonialtemp3 img {
+    width: 15px;
+    height: 15px;
+  }
+  .testimonial1temp3 {
+    margin-left: 200px;
+    font-size: x-large;
+    color: white;
+  }
+  .footerfortemp3 footer {
+    background-color: #5e17eb;
+    border-radius: 25px;
+    margin-top: 150px;
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 40px;
+    color: white;
+  }
+  .footerfortemp3 ul {
+    list-style: none;
+    margin-top: 8px;
+  }
+  .footerfortemp3 li {
+    margin-top: 8px;
+  }
 }
