--- a/src/home/order/order.css
+++ b/src/home/order/order.css
@@ -1,42 +1,35 @@
 .orderprods {
-  width: 200px;
-  height: 150px;
-  border: 2px solid black;
-  border-radius: 25px;
-  margin: 10px;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  padding: 10px;
+  margin: 0 0 10px 0;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.2s;
 }
 
-.orderprods p {
-  margin-left: 5px;
-  color: black;
+.orderprods:hover {
+  background-color: #f9f9f9;
+  transform: translateY(-2px);
 }
 
-.orderheadinorder header {
-  background-color: white;
+.prodimg img {
+  max-width: 50px;
+  height: auto;
+  margin-right: 10px;
 }
 
-.orderheadinorder h2 {
-  color: black;
-  margin-left: 350px;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+.nameofuser p {
+  font-weight: bold;
+  margin: 0;
+  font-size: 14px;
+  color: #111;
 }
 
-.orderheadinorder span {
-  display: inline-flex;
-}
-
-.orderheadinorder button {
-  color: black;
-  background-color: white;
-  border: 2px solid white;
-  padding: 10px 30px;
-  margin-left: 30px;
-  font-weight: 400;
-  font-size: medium;
-}
-
-.orderheadinorder button:hover {
-  transition: 0.4s;
-  border-radius: 25px;
-  text-decoration: underline red;
+.nameofprod {
+  flex-grow: 1;
+  text-align: right;
+  font-size: 12px;
 }
