--- a/src/home/profile/profilepic/profilepic.css
+++ b/src/home/profile/profilepic/profilepic.css
@@ -1,35 +1,31 @@
 @media (min-width: 312px) and (max-width: 480px) {
-  .prifilepic img {
+  .profile-pic  {
     width: 100px;
-    border: 2px solid black;
     border-radius: 50%;
     margin-left: 50px;
   }
 }
 
 @media (min-width: 481px) and (max-width: 768px) {
-  .prifilepic img {
+  .profile-pic  {
     width: 150px;
-    border: 2px solid black;
     border-radius: 50%;
     margin-left: 150px;
   }
 }
 
 @media (min-width: 769px) and (max-width: 1024px) {
-  .prifilepic img {
+  .profile-pic  {
     width: 200px;
-    border: 2px solid black;
     border-radius: 50%;
     margin-left: 250px;
   }
 }
 
 @media (min-width: 1025px) {
-  .prifilepic img {
+  .profile-pic  {
     width: 240px;
-    border: 2px solid black;
     border-radius: 50%;
-    margin-left: 380px;
+    margin-left: 400px;
   }
 }
